# take-home-ascertain

./: .env.example  .gitignore  CHALLENGE.MD  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 93a45de7fa87_initial_schema.py  b2c3d4e5f6a7_add_indexes_and_unique_email.py  c3d4e5f6a7b8_add_sortable_column_indexes.py
backend/app/: main.py  seed.py
backend/app/api/: health.py  notes.py  patients.py
backend/app/core/: config.py  dates.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  note.py  patient.py
backend/app/schemas/: common.py  note.py  patient.py  stats.py  summary.py
backend/app/services/: patients.py  summary.py
backend/tests/: conftest.py  test_health.py  test_notes.py  test_patients.py  test_stats.py  test_summary.py
docs/: plan.md
docs/tasks/: README.md  task-00-infra-bootstrap.md  task-01-backend-scaffold.md  task-02-frontend-scaffold.md  task-03-database-models-migrations.md  task-04-seed-data.md  task-05-patient-crud-api.md  task-06-notes-summary-api.md  task-07-frontend-layout-routing.md  task-08-patient-list-ui.md  task-09-patient-detail-notes-summary-ui.md  task-10-patient-form.md  task-11-testing.md  task-12-containerization.md  task-13-readme.md  task-14-patient-stats-endpoint.md  task-15-theme-overhaul-dark-mode.md  task-16-dashboard-data-visualization.md  (+8 more)
frontend/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
perf/: README.md
(+53 files in other folders)
